three images are displayed onload to fix weird spacing when they are hidden

--- a/styles/style.css
+++ b/styles/style.css
@@ -105,11 +105,6 @@ footer {
     box-shadow: var(--shadow);
 }
 
-.left-side, .right-side {
-    display: grid;
-    border: 1px solid rgb(21, 190, 212);
-}
-
 .left-side {
     display: flex;
     flex-flow: column;
